packages/typ/tests/fixtures/diagnostics/0264_fun_recursive_self_application_03.ml
let rec bad_gamma x = x x
